<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment2</string>
    <string name="action_settings">Settings</string>
    <string name="vibration">Vibration</string>
    <string name="start_fragment">Go To Fragments</string>
    <string name="start_cam">Start Camera</string>
    <string name="start_activity">Start New Activity</string>
    <string name="notification">Get Notification</string>
    <string name="toast">Toast Me</string>
    <string name="title_activity_status_bar">StatusBar</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="poppy_2">Picture 2</string>
    <string name="poppy_1">Picture 1</string>
    <string name="tv_pic_desc_banner"></string>
    <string name="tvFragment">Add a picture to the stack</string>
    
    

</resources>
